# yz-microservices

./: .gitignore  CMakeLists.txt
include/rpc/detail/: log.h
samples/basic_rpc/: CMakeLists.txt  client_rpc_sample.cpp  server_rpc_sample.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/communication/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h
src/core/communication/test/: CMakeLists.txt  server_test.cpp
src/core/service/: CMakeLists.txt  service.cpp  service.h
src/core/service/test/: CMakeLists.txt  service_test.cpp
